<resources>
    <string name="app_name">CardViewActivity</string>
    <string name="description_accessibility_text">seleccionar</string>
    <string name="soles_saving_account">Cuenta de ahorro soles</string>
    <string name="soles_amount_account">S/ 2500.80</string>
    <string name="soles_amount_account_two">S/ 2550.85</string>
    <string name="bcp_number_account">N° de cuenta: 192-11303551-0-27</string>
    <string name="bcp_number_two_account">N° de cuenta: 192-11303551-2-88</string>
    <string name="title_accessibility">Elige que cuenta quieres cancelar:</string>
</resources>